--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -208,7 +208,7 @@
     <Compile Include="Assets\Scripts\Behaviors\Candela\Hitted.cs" />
     <Compile Include="Assets\Imported\Plugins\DotWeen\Demigiant\DOTween\Modules\DOTweenModulePhysics.cs" />
     <Compile Include="Assets\Imported\Dark - Complete Horror UI\Scripts\Rendering\UIParticleRenderer.cs" />
-    <Compile Include="Assets\_VerticalSlice\Scripts\FunctionManager\CrowMovement.cs" />
+    <Compile Include="Assets\_VerticalSlice\Scripts\FunctionManager\Crow\CrowMovement.cs" />
     <Compile Include="Assets\Imported\Plugins\DotWeen\Demigiant\DOTween\Modules\DOTweenModuleSprite.cs" />
     <Compile Include="Assets\Scripts\Behaviors\Armore\armoreHealBehavior.cs" />
     <Compile Include="Assets\BackLog\proyectile Testing\Scripts\Gun_Test.cs" />
