--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -258,6 +258,7 @@
     <Compile Include="Assets\BA_AnimSwipe.cs" />
     <Compile Include="Assets\BA_AnimShoot.cs" />
     <Compile Include="Assets\BA_AnimShield.cs" />
+    <Compile Include="Assets\BA_Return.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro.cginc" />
