problemas con el nuevo proyectil
No parece ser comnpatible con el sistema de proyectiles ya implementado. N c si sale mejor usar otro o crear un sistema para ese proyectil especificamente

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -259,6 +259,8 @@
     <Compile Include="Assets\Scripts\Behaviors\Puppet\PuppetNavigation.cs" />
     <Compile Include="Assets\Scripts\Behaviors\Armore\armoreHorizontalBehavior.cs" />
     <Compile Include="Assets\Scripts\Function Manager\Sadie\SadieAtackAnim2.cs" />
+    <Compile Include="Assets\VFX\Slash\SlashShooter.cs" />
+    <Compile Include="Assets\VFX\Slash\GroundSlash_1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro.cginc" />
