Menu añadido subir o bajar volumen mediante el fmod
Hay un bug que cuando le das click en el menu todavia sigue el input de cuando atacas

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -226,9 +226,11 @@
     <Compile Include="Assets\Imported\Dark - Complete Horror UI\Scripts\UI Elements\SwitchManager.cs" />
     <Compile Include="Assets\Scripts\Player\TakeWeapon.cs" />
     <Compile Include="Assets\Scripts\Behaviors\Armore\armoreVerticalBehavior.cs" />
+    <Compile Include="Assets\_VerticalSlice\Scripts\SettingsController.cs" />
     <Compile Include="Assets\BackLog\proyectile Testing\Scripts\Holder.cs" />
     <Compile Include="Assets\Scripts\Behaviors\BossFinal\AtaqueTornadoStateMachine.cs" />
     <Compile Include="Assets\Animation\Controllers\PlayerInput.cs" />
+    <Compile Include="Assets\_VerticalSlice\Scripts\UI\TriggersTutorial.cs" />
     <Compile Include="Assets\Scripts\Sounds\SfxInstance.cs" />
     <Compile Include="Assets\Scripts\Player\SpellDamage.cs" />
     <Compile Include="Assets\BA_AnimShoot.cs" />
@@ -268,7 +270,6 @@
     <Compile Include="Assets\Scripts\Behaviors\Puppet\PuppetNavigation.cs" />
     <Compile Include="Assets\Scripts\Behaviors\Armore\armoreHorizontalBehavior.cs" />
     <Compile Include="Assets\Scripts\Function Manager\Sadie\SadieAtackAnim2.cs" />
-    <Compile Include="Assets\_VerticalSlice\Scripts\UI\TriggersTutorial.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro.cginc" />
