Arrelado bug de la barra de vida y ahora solo cuando fijas sale la vida del enemigo
Ahora la barra de vida siempre mira en dirección a la cámara

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -271,6 +271,7 @@
     <Compile Include="Assets\Scripts\Behaviors\Puppet\PuppetNavigation.cs" />
     <Compile Include="Assets\Scripts\Behaviors\Armore\armoreHorizontalBehavior.cs" />
     <Compile Include="Assets\Scripts\Function Manager\Sadie\SadieAtackAnim2.cs" />
+    <Compile Include="Assets\EnemyHealthBarManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro.cginc" />
