--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Assets\WeaponWheelController.cs" />
     <Compile Include="Assets\ChangeCameraBridge.cs" />
     <Compile Include="Assets\Scripts\Sounds\ControladorSonidos.cs" />
+    <Compile Include="Assets\CooldownManager.cs" />
     <Compile Include="Assets\Scripts\Behaviors\Armore\AnimationBehavior\BA_AnimShield.cs" />
     <Compile Include="Assets\Scripts\Interaction\PlataformEffect.cs" />
     <Compile Include="Assets\Scripts\Player\Player.cs" />
